my-flaskapi-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flaskapi-deployment
  labels:
    app: my-flaskapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-flaskapi
  template:
    metadata:
      labels:
        app: my-flaskapi
    spec:
      containers:
      - name: my-flaskapi
        image: sdereynal/flaskapi-senti:latest
        ports:
        - containerPort: 8000
