my-flaskapi-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-flaskapi-service
  labels:
    app: my-flaskapi
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-flaskapi
